feat: Complete deployment pipeline and configuration fixes
## CI/CD Pipeline
- Add ECR repository with lifecycle policies
- Create build-and-deploy workflow (test → build → push → deploy)
- Update Terraform apply workflow with ECR module
- Fix ECS cluster name (fileflow-prod-cluster → fileflow-prod)
- Add Atlantis configuration for ECR module

## Configuration Fixes
- MySQL: Change hardcoded localhost to environment variables
  - DB_HOST, DB_PORT, DB_NAME, DB_USER, DB_PASSWORD
- ECS: Add Redis environment variables
  - REDIS_HOST, REDIS_PORT from SSM parameters
- ECS: Update container image from nginx:latest to ECR image
- ECS: Add comprehensive environment variables for Spring Boot
- ECS: Add ECR access IAM policy for task execution role

## Infrastructure Updates
- ECR: Add data source for fileflow-prod repository
- Redis: Add SSM parameter data sources for endpoint and port
- S3: Fix bucket naming to avoid double hyphens
  - Conditional logic: fileflow-prod when bucket_purpose is empty

## REST API Fixes (Long FK Strategy)
- Migrate SettingsController tests to use testFixtures
- Update SettingsDtoMapper to SettingsApiMapper
- Rename DTO classes with Api prefix
- Fix CreateSettingRequest to CreateSettingApiRequest
- Fix UpdateSettingRequest to UpdateSettingApiRequest
- Update E2E tests to match new API structure